syntax="proto3";
import "proto/login.proto";

//package proto;

message LoadRoleListReq {
	string account = 1;
}

message LoadRoleReq {
	int32 role_id = 1;
	int32 conn_id = 2;
}

message LoadRoleRsp {
	int32 conn_id = 1;
	RoleInfo role_info = 2;
}

